# fastapi_zero

./: database.db  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py  settings.py
migrations/versions/: 8fd648e1ad60_add_campo_updated_at.py  b8b37e4c5c19_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
